# wd-40

./: .gitignore  Cargo.toml  README.md  flake.nix  package-lock.json  package.json
src/: cleaner.rs  lib.rs  logging.rs  main.rs  walker.rs
tests/: integration_test.rs  setup_test_artifacts.sh
