[package]
name = "wd-40"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to recursively find and clean Rust projects"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
anyhow = "1.0"
colored = "2.1"
chrono = "0.4"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.14"
